<resources>
    <string name="app_name">SharpSight</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="login"><![CDATA[Login >]]></string>
    <string name="register"><![CDATA[Register >]]></string>
    <string name="email">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;      EMAIL</string>
    <string name="password">&#160;&#160;&#160;&#160;&#160;&#160;PASSWORD</string>
    <string name="user_name">&#160;&#160;&#160;&#160;&#160;&#160;USER NAME</string>
    <string name="signup">SIGNUP</string>
    <string name="sign_in">SIGN IN</string>

    <string name="under_dev_text">Under Development</string>
    <string name="bad_api_response_head">Something went wrong.</string>
    <string name="no_internet_txt_head">No internet connection</string>


</resources>